syntax = "proto3";

package com.autoindustry.backend.grpc;

option java_package = "com.autoindustry.backend.grpc";
option java_multiple_files = true;

service InventoryService {
  rpc AddPart (AddPartRequest) returns (PartResponse);
  // Add more if needed
}

message AddPartRequest {
  string name = 1;
  string category = 2;
  double price = 3;
  int32 stock = 4;
}

message PartResponse {
  int64 id = 1;
  string name = 2;
  string category = 3;
  double price = 4;
  int32 stock = 5;
}